--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
     <meta name="author" content="Andrew Donaghy">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
     <title>practice</title>
   </head>  
   
 <body>
 <header>
   <img src="images/ocean.jpg">
+  <img src="images/tools.png">
 </header>
 
 <aside>
-  
-<img src="images/tools.png">
 <img src="images/world.png">
-  
 </aside>  
 
 <article>
